package proto_notify;

message MessageUsersHeader {
  repeated uint64 user_ids = 1;
}

message MessageUsersResponse {}

message TextMessage {
  enum Type {
    JSON = 0;
  }
  required Type type = 1;
  required string data = 2;
}
